--- a/project/templates/table.html
+++ b/project/templates/table.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Linking the CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-
+    <script
+      src="https://kit.fontawesome.com/5548f5ed00.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- Google Fonts: Poppins -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap"
       rel="stylesheet"
     />
-    <title>Main Page</title>
+    <title>Provisional Time Table</title>
     <style>
       body {
         background-size: cover;
@@ -27,6 +30,20 @@
     </style>
   </head>
   <body>
+        <!-- Nav Starts -->
+        <nav class="navbar navbar-light mb-5 p-3" style="background-color: #fffafa;">
+          <div class="container">
+            <a class="navbar-brand">Provisional Time Table</a>
+            <div class="d-flex">
+              <a class="btn btn-outline-info" href="/admin/">Admin</a>
+               &nbsp;
+              <a class="btn btn-outline-success" href="{% url 'start' %}">Home</a>
+               &nbsp;
+              <a class="btn btn-outline-dark" href="{% url 'signout' %}">Log Out</a>
+              </div>
+          </div>
+        </nav>
+        <!-- Nav Ends -->
     <H1><FONT COLOR="DARKCYAN"><CENTER>Provisional Time Table</FONT></H1>
     <div class="container">
       <table class="table table-primary table-striped" border="2" cellspacing="3" align="center">
@@ -43,5 +60,63 @@
       {% endfor %}
       </table>
     </div>
+    <br><br><br><br><br><br>
+<!-- Footer -->
+<footer
+class="page-footer font-small mt-5"
+style="background-color: #f6e5f6; color: rgb(37, 37, 35)"
+>
+<div style="background-color: #fffafa">
+  <div class="container">
+    <!-- Grid row-->
+    <div class="row py-4 d-flex align-items-center">
+      <!-- Grid column -->
+      <div
+        class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0"
+      >
+        <h6 class="mb-0"></h6>
+      </div>
+      <div class="col-md-6 col-lg-7 text-center text-md-right">
+        Find our source code on GitHub!
+        <a href="https://github.com/adwait-hegde/exam-scheduler" class="tw-ic" style="color: #1b1e24;">
+          <i class="fab fa-github white-text mr-4"> </i>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container text-center text-md-left mt-5">
+  <!-- Grid row -->
+  <div class="row mt-3">
+    <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mb-4">
+      <center>
+        Yash Brid<br />2019130008<br />&nbsp;&nbsp;
+        <a href="https://www.linkedin.com/in/adwait-hegde/" class="li-ic"><i class="fab fa-linkedin-in white-text mr-4"></i></a>
+        <a href="https://github.com/bridyash13/" class="tw-ic"><i class="fab fa-github white-text mr-4"></i></a>
+        <a href="https://twitter.com/bridyash13/" class="tw-ic"><i class="fab fa-twitter white-text mr-4"></i></a>
+      </center>
+    </div>
+    <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mb-4">
+      <center>
+        Abhishek Chopra<br />
+        2019130009<br />&nbsp;&nbsp;&nbsp;
+        <a href="https://www.linkedin.com/in/yash-jagtap-405a37150/" class="li-ic"><i class="fab fa-linkedin-in white-text mr-4"></i></a>
+        <a href="https://github.com/AbhishekC20001/" class="tw-ic"><i class="fab fa-github white-text mr-4"></i></a>
+        <a href="" class="tw-ic"><i class="fab fa-twitter white-text mr-4"></i></a>
+      </center>
+    </div>
+    <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mb-4">
+      <center>
+        Adwait A Hegde<br>
+        2019130019<br>&nbsp;&nbsp;&nbsp;
+        <a href="https://www.linkedin.com/in/adwait-hegde/" class="li-ic"><i class="fab fa-linkedin-in white-text mr-4"></i></a>
+        <a href="https://github.com/adwait-hegde/" class="tw-ic"><i class="fab fa-github white-text mr-4"></i></a>
+        <a href="https://twitter.com/adwait_hegde/" class="tw-ic"><i class="fab fa-twitter white-text mr-4"></i></a>
+      </center>
+    </div>
+  </div>
+</div>
+</footer>
   </body>
 </html>
